--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
   "Topic :: System :: Networking",
   "Topic :: System :: Systems Administration",
 ]
-dependencies = ["fastmcp", "paramiko>=3.4.0", "xdialog"]
+dependencies = ["fastmcp", "paramiko>=3.4.0", "xdialog", "python-dotenv"]
 
 [project.scripts]
 mcp-ssh-session = "mcp_ssh_session.__main__:main"
